--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,6 +45,10 @@
         }
     }
 
+    .smallNav {
+        display: none;
+    }
+
     .hamburger {
         display: none;
     }
